tests/sql_correctness/snapshots/query_select_only__2.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT abalance FROM pgbench_accounts WHERE aid = 10

+----------+
| abalance |
+----------+
| 0        |
+----------+
