tests/sql_correctness/snapshots/query_select_only__3.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT abalance FROM pgbench_accounts WHERE aid = 100

+----------+
| abalance |
+----------+
| 0        |
+----------+
