tests/sql_correctness/snapshots/query_select_only__4.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT abalance FROM pgbench_accounts WHERE aid = 1000

+----------+
| abalance |
+----------+
| 0        |
+----------+
