tests/sql_correctness/snapshots/query_select_only__5.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT abalance FROM pgbench_accounts WHERE aid = 10000

+----------+
| abalance |
+----------+
| 0        |
+----------+
